tcosconfig (0.3.3) unstable; urgency=low

  * TcosGui.py:
    - set_name() on aboutdialog

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Fri, 05 Sep 2008 11:18:00 +0200

tcosconfig (0.3.2) unstable; urgency=low

  * debian/*
    - Fix typo

 -- Ignacio Vidal <vidal_joshur@gva.es>  Tue, 22 Jul 2008 13:51:29 +0200

tcosconfig (0.3.1) unstable; urgency=low

  * New release 0.3.1

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sat, 19 Jul 2008 20:38:24 +0200

tcosconfig (0.3~rc13) unstable; urgency=low

  * Update pt_BR translation, thanks to: Aécio dos Santos Pires <aecio at comunicacaodigital.org>"

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Wed, 16 Jul 2008 20:35:30 +0200

tcosconfig (0.3~rc12) unstable; urgency=low

  * Update pt_BR translation, thanks to: Aécio dos Santos Pires <aecio at comunicacaodigital.org>"

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Tue, 15 Jul 2008 18:52:17 +0200

tcosconfig (0.3~rc11) unstable; urgency=low

  * Update translation

 -- Ignacio Vidal <vidal_joshur@gva.es>  Tue, 01 Jul 2008 14:48:54 +0200

tcosconfig (0.3~rc10) unstable; urgency=low

  [ Mario Izquierdo (mariodebian) ]
  * ConfigReader.py:
    - rewrite getkernels function

  [ Ignacio Vidal ]
  * Add valencian translations by Lliurex 

 -- Ignacio Vidal <vidal_joshur@gva.es>  Mon, 30 Jun 2008 10:22:33 +0200

tcosconfig (0.3~rc9) unstable; urgency=low

  * Remove Virtualterminal and vte dependencies, use a textview

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Wed, 18 Jun 2008 18:14:12 +0200

tcosconfig (0.3~rc8) unstable; urgency=low

  * TcosGui.py
    - Fix typo
  * ConfigReader.py shared.py TcosGui.py
    - Revert some changes

 -- Ignacio Vidal <vidal_joshur@gva.es>  Thu, 05 Jun 2008 17:02:53 +0200

tcosconfig (0.3~rc7) unstable; urgency=low

  * ConfigReader.py shared.py TcosGui.py
    - Allow from generic /etc/tcos/secrets/tcosmonitor-secrets user and passwd
